--- a/HadayIMWpfControls/HadayIMWpfControls/HadayIMWpfControls.csproj
+++ b/HadayIMWpfControls/HadayIMWpfControls/HadayIMWpfControls.csproj
@@ -35,6 +35,24 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -70,6 +88,7 @@
     <Compile Include="WPFControls\Converters\ConverterMessageToDocument.cs" />
     <Compile Include="WPFControls\Converters\ConverterStringToBrushes .cs" />
     <Compile Include="WPFControls\Helper\FlowDocumentHelper.cs" />
+    <Compile Include="WPFControls\Helper\ImageHelper.cs" />
     <Compile Include="WPFControls\Helper\ImageStretchHelper.cs" />
     <Compile Include="WPFControls\Helper\RichTextBoxHelper.cs" />
     <Compile Include="WPFControls\Helper\ScrollViewerBehavior.cs" />
@@ -114,6 +133,10 @@
       <DependentUpon>MessageManager.xaml</DependentUpon>
     </Compile>
     <Page Include="WPFControls\Chat\Loading.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WPFControls\Chat\ResoircesDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
